fix(switcher): z-index

--- a/react-cra/src/index.css
+++ b/react-cra/src/index.css
@@ -27,6 +27,7 @@ body,
     height: 60px;
     top: 96px;
     right: 32px;
+    z-index: 1;
 }
 
 .container {
